--- a/surpass/surpass-dao/pom.xml
+++ b/surpass/surpass-dao/pom.xml
@@ -25,6 +25,26 @@
 			<artifactId>surpass-pojo</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.dromara.surpass</groupId>
+			<artifactId>surpass-commons-common</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.dromara.surpass</groupId>
+			<artifactId>surpass-commons-common</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.dromara.surpass</groupId>
+			<artifactId>surpass-commons-core</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.dromara.surpass</groupId>
+			<artifactId>surpass-commons-crypto</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
