--- a/surpass/surpass-starter/surpass-starter-xss/pom.xml
+++ b/surpass/surpass-starter/surpass-starter-xss/pom.xml
@@ -9,7 +9,7 @@
         <version>1.1.0</version>
     </parent>
 
-    <artifactId>surpass-starter-sms</artifactId>
+    <artifactId>surpass-starter-xss</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
