--- a/surpass/pom.xml
+++ b/surpass/pom.xml
@@ -222,6 +222,11 @@
 			<version>1.6.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apereo.cas.client</groupId>
+			<artifactId>cas-client-core</artifactId>
+			<version>4.0.4</version>
+		</dependency>
 
 		<!--test-->
 		<dependency>
