--- a/surpass/surpass-commons/surpass-commons-libs/pom.xml
+++ b/surpass/surpass-commons/surpass-commons-libs/pom.xml
@@ -9,7 +9,7 @@
         <version>1.1.0</version>
     </parent>
 
-    <artifactId>surpass-commons-core</artifactId>
+    <artifactId>surpass-commons-libs</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,20 +19,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.dromara.surpass</groupId>
-            <artifactId>surpass-commons-common</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-jpa-extra</artifactId>
+            <version>3.3.6</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/mybatis-jpa-extra-3.3.6.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>org.dromara.surpass</groupId>
-            <artifactId>surpass-pojo</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.dromara.surpass</groupId>
-            <artifactId>surpass-commons-crypto</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-jpa-extra-spring-boot-starter</artifactId>
+            <version>3.3.6</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/mybatis-jpa-extra-spring-boot-starter-3.3.6.jar</systemPath>
         </dependency>
     </dependencies>
-
 </project>
