--- a/surpass/surpass-commons/surpass-authn-core/build.gradle
+++ b/surpass/surpass-commons/surpass-authn-core/build.gradle
@@ -4,7 +4,7 @@ description = "surpass-authn-core"
 
 dependencies {
 	//local jars
-	implementation fileTree(dir: '../surpass-lib/', include: '*/*.jar')
+	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
 
 	implementation project(":surpass-commons:surpass-common")
 	implementation project(":surpass-commons:surpass-core")
