--- a/surpass/surpass-commons/surpass-common/build.gradle
+++ b/surpass/surpass-commons/surpass-common/build.gradle
@@ -4,5 +4,5 @@ dependencies {
 
     implementation project(":surpass-commons:surpass-crypto")
 	//local jars
-	implementation fileTree(dir: '../surpass-lib/', include: '*/*.jar')
+	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
 }
