--- a/surpass/surpass-commons/surpass-crypto/build.gradle
+++ b/surpass/surpass-commons/surpass-crypto/build.gradle
@@ -2,6 +2,6 @@ description = "surpass-crypto"
 
 dependencies {
 	//local jars
-	implementation fileTree(dir: '../surpass-lib/', include: '*/*.jar')
+	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
 
 }
