--- a/surpass/surpass-entity/build.gradle
+++ b/surpass/surpass-entity/build.gradle
@@ -4,6 +4,6 @@ dependencies {
 	implementation project(":surpass-commons:surpass-common")
 	implementation project(":surpass-commons:surpass-crypto")
 	//local jars
-	implementation fileTree(dir: '../surpass-lib/', include: '*/*.jar')
+	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
 
 }
