--- a/surpass/surpass-starter/surpass-starter-captcha/build.gradle
+++ b/surpass/surpass-starter/surpass-starter-captcha/build.gradle
@@ -10,5 +10,5 @@ dependencies {
 
     implementation project(":surpass-entity")
 	//local jars
-	implementation fileTree(dir: '../surpass-lib/', include: '*/*.jar')
+	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
 }
