--- a/surpass/surpass-web/src/main/resources/application-surpass.properties
+++ b/surpass/surpass-web/src/main/resources/application-surpass.properties
@@ -44,14 +44,16 @@ spring.datasource.url                           =jdbc:mysql://${DATABASE_HOST:19
 spring.datasource.username                      =${DATABASE_USER:surpass}
 spring.datasource.password                      =${DATABASE_PWD:Surpass321!}
 
-#mybatis
-mybatis-plus.dialect                                    =mysql
+# MyBatis XML ??
+mybatis.mapper-locations=classpath*:com/surpass/persistence/mapper/xml/mysql/*.xml
+# MyBatis ????
+mybatis.type-aliases-package=com.surpass.entity,com.surpass.entity.access,com.surpass.entity.apps,com.surpass.entity.config,com.surpass.entity.history,com.surpass.entity.idm,com.surpass.entity.openapi,com.surpass.entity.permissions
+# ??????????
+mybatis.configuration.map-underscore-to-camel-case=true
+# ??
+mybatis.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 
-mybatis-plus.type-aliases-package                       =com.surpass.entity,com.surpass.entity.access,com.surpass.entity.apps,com.surpass.entity.config,com.surpass.entity.history,com.surpass.entity.idm,\
-com.surpass.entity.openapi,com.surpass.entity.permissions,com.surpass.entity.sync
-mybatis-plus.mapper-locations                           =classpath*:com/surpass/persistence/mapper/xml/${mybatis-plus.dialect}/*.xml
-mybatis-plus.configuration.map-underscore-to-camel-case =true
-mybatis-plus.configuration.log-impl                     =org.apache.ibatis.logging.slf4j.Slf4jImpl
+
 
 
 ############################################################################
@@ -63,8 +65,10 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 # Log
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
-logging.level.com.baomidou.mybatisplus=DEBUG
+logging.level.org.apache.ibatis.logging=DEBUG
 logging.level.org.apache.ibatis=DEBUG
+logging.level.jdbc.sqlonly=DEBUG
+
 
 ############################################################################
 #redis server  configuration                                               #
