--- a/surpass/build.gradle
+++ b/surpass/build.gradle
@@ -175,6 +175,7 @@ subprojects {
         implementation group: 'org.springframework.security', name: 'spring-security-core', version: "${springSecurityVersion}"
         implementation group: 'org.springframework.security', name: 'spring-security-web', version: "${springSecurityVersion}"
         implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: "${springSecurityVersion}"
+        implementation group: 'org.springframework.security', name: 'spring-security-oauth2-authorization-server', version: "${springSecurityOauth2Version}"
         //srpingboot
         implementation group: 'org.springframework.boot', name: 'spring-boot', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: "${springBootVersion}"
@@ -190,6 +191,7 @@ subprojects {
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: "${springBootVersion}"
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"
         testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
         //spring-boot-admin
         //spring-data
