--- a/surpass/gradle.properties
+++ b/surpass/gradle.properties
@@ -16,6 +16,7 @@ jibToAuthPassword				=docker registry credential
 springVersion                   =6.2.8
 springBootVersion               =3.4.7
 springSecurityVersion           =6.5.1
+springSecurityOauth2Version     =1.3.1
 springDataVersion               =3.5.1
 springretryVersion              =2.0.9
 #spring plugin
