--- a/surpass/build.gradle
+++ b/surpass/build.gradle
@@ -175,7 +175,7 @@ subprojects {
         implementation group: 'org.springframework.security', name: 'spring-security-core', version: "${springSecurityVersion}"
         implementation group: 'org.springframework.security', name: 'spring-security-web', version: "${springSecurityVersion}"
         implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: "${springSecurityVersion}"
-        implementation group: 'org.springframework.security', name: 'spring-security-oauth2-authorization-server', version: "${springSecurityOauth2Version}"
+//        implementation group: 'org.springframework.security', name: 'spring-security-oauth2-authorization-server', version: "${springSecurityOauth2Version}"
         //srpingboot
         implementation group: 'org.springframework.boot', name: 'spring-boot', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: "${springBootVersion}"
@@ -185,7 +185,7 @@ subprojects {
         implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: "${springBootVersion}"
-        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: "${springBootVersion}"
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version:  "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: "${springBootVersion}"
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: "${springBootVersion}"
