--- a/surpass/surpass-web/src/main/resources/application-surpass.properties
+++ b/surpass/surpass-web/src/main/resources/application-surpass.properties
@@ -130,9 +130,10 @@ springdoc.group-configs[0].group                =default
 springdoc.group-configs[0].paths-to-match       =/*
 springdoc.group-configs[0].packages-to-scan     =org.maxkey
 
-knife4j.enable                                  =true
-knife4j.setting.language                        =ZH_CN
-knife4j.setting.swagger-model-name              =\u5B9E\u4F53\u7C7B\u5217\u8868
+# ??knife4j
+#knife4j.enable                                  =false
+#knife4j.setting.language                        =ZH_CN
+#knife4j.setting.swagger-model-name              =\u5B9E\u4F53\u7C7B\u5217\u8868
 ############################################################################
 #static resources configuration                                            #
 ############################################################################
