动态api文档生成，未完成。

--- a/surpass/surpass-web/src/main/resources/application-surpass.properties
+++ b/surpass/surpass-web/src/main/resources/application-surpass.properties
@@ -114,21 +114,32 @@ spring.boot.admin.client.password               =${SPRING_BOOT_ADMIN_PASSWORD:}
 #springfox.documentation.swagger.v2.path=/api-docs                         #
 #Swagger Configure Properties                                              #
 ############################################################################
-surpass.swagger.enable                           =true
-surpass.swagger.title                            =MaxKey\u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u7CFB\u7EDFAPI\u6587\u6863
-surpass.swagger.description                      =MaxKey\u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u7CFB\u7EDFAPI\u6587\u6863
-surpass.swagger.version                          =${application.formatted-version}
 
-springdoc.api-docs.version                      =OPENAPI_3_0
-springdoc.swagger-ui.path                       =/swagger-ui.html
-springdoc.swagger-ui.enabled                    =true
-springdoc.swagger-ui.tags-sorter                =alpha
-springdoc.swagger-ui.operations-sorter          =alpha
-springdoc.swagger-ui.showExtensions             =true
+# OpenAPI ??
+springdoc.api-docs.enabled                      =true
 springdoc.api-docs.path                         =/v3/api-docs
+springdoc.api-docs.version                      =OPENAPI_3_0
+# Swagger UI
+springdoc.swagger-ui.enabled                    =true
+springdoc.swagger-ui.path                       =/swagger-ui.html
+springdoc.swagger-ui.operations-sorter          =method
+# API ??
+springdoc.info.title                            =MaxKey\u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u7CFB\u7EDFAPI\u6587\u6863
+springdoc.info.description                      =MaxKey\u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u7CFB\u7EDFAPI\u6587\u6863
+springdoc.info.version                          =${application.formatted-version}
+springdoc.info.contact.name                     =MaxKey
+springdoc.info.contact.email                    =MaxKey@MaxKey.com
+# ????
+springdoc.components.security-schemes.apiKey.type=APIKEY
+springdoc.components.security-schemes.apiKey.in=HEADER
+springdoc.components.security-schemes.apiKey.name=maxkey
+
 springdoc.group-configs[0].group                =default
 springdoc.group-configs[0].paths-to-match       =/*
-springdoc.group-configs[0].packages-to-scan     =org.maxkey
+springdoc.group-configs[0].packages-to-scan     =com.surpass
+springdoc.group-configs[1].group                =dynamic-apis
+springdoc.group-configs[1].paths-to-match       =/api-v1
+springdoc.group-configs[1].packages-to-scan     =com.surpass
 
 # ??knife4j
 #knife4j.enable                                  =false
