--- a/surpass/build.gradle
+++ b/surpass/build.gradle
@@ -343,13 +343,9 @@ subprojects {
         implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: "${springdocVersion}"
         implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: "${springdocVersion}"
         //webjars
-        implementation group: 'org.webjars', name: 'webjars-locator-core', version: "${webjarslocatorcoreVersion}"
-        implementation group: 'org.webjars', name: 'webjars-locator', version: "${webjarslocatorVersion}"
-        implementation group: 'org.webjars', name: 'swagger-ui', version: "${swaggeruiVersion}"
-//        //knife4j# 禁用knife4j
-//        implementation group: 'com.github.xiaoymin', name: 'knife4j-core', version: "${knife4jVersion}"
-//        implementation group: 'com.github.xiaoymin', name: 'knife4j-openapi3-ui', version: "${knife4jVersion}"
-//        implementation group: 'com.github.xiaoymin', name: 'knife4j-openapi3-jakarta-spring-boot-starter', version: "${knife4jVersion}"
+//        implementation group: 'org.webjars', name: 'webjars-locator-core', version: "${webjarslocatorcoreVersion}"
+//        implementation group: 'org.webjars', name: 'webjars-locator', version: "${webjarslocatorVersion}"
+//        implementation group: 'org.webjars', name: 'swagger-ui', version: "${swaggeruiVersion}"
 
         //mybatis-jpa
         implementation group: 'org.dromara.mybatis-jpa-extra', name: 'mybatis-jpa-extra', version: "${mybatisjpaextraVersion}"
