--- a/surpass/surpass-web/src/main/resources/application-surpass.properties
+++ b/surpass/surpass-web/src/main/resources/application-surpass.properties
@@ -115,25 +115,21 @@ spring.boot.admin.client.password               =${SPRING_BOOT_ADMIN_PASSWORD:}
 #Swagger Configure Properties                                              #
 ############################################################################
 
-# OpenAPI ??
+# springdoc OpenAPI
 springdoc.api-docs.enabled                      =true
 springdoc.api-docs.path                         =/v3/api-docs
 springdoc.api-docs.version                      =OPENAPI_3_0
-# Swagger UI
 springdoc.swagger-ui.enabled                    =true
 springdoc.swagger-ui.path                       =/swagger-ui.html
 springdoc.swagger-ui.operations-sorter          =method
-# API ??
-springdoc.info.title                            =MaxKey\u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u7CFB\u7EDFAPI\u6587\u6863
-springdoc.info.description                      =MaxKey\u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u7CFB\u7EDFAPI\u6587\u6863
+springdoc.info.title                            =Surpass API
+springdoc.info.description                      =Surpass API
 springdoc.info.version                          =${application.formatted-version}
-springdoc.info.contact.name                     =MaxKey
-springdoc.info.contact.email                    =MaxKey@MaxKey.com
-# ????
+springdoc.info.contact.name                     =Surpass
+springdoc.info.contact.email                    =surpass@surpass.com
 springdoc.components.security-schemes.apiKey.type=APIKEY
 springdoc.components.security-schemes.apiKey.in=HEADER
 springdoc.components.security-schemes.apiKey.name=maxkey
-
 springdoc.group-configs[0].group                =default
 springdoc.group-configs[0].paths-to-match       =/*
 springdoc.group-configs[0].packages-to-scan     =com.surpass
