--- a/surpass/build.gradle
+++ b/surpass/build.gradle
@@ -35,19 +35,38 @@ allprojects {
     sourceCompatibility = 17
     targetCompatibility = 17
     compileJava.options.encoding = 'UTF-8'
+    compileJava.options.compilerArgs.add("-parameters")
 
     eclipse {
         /*设置工程字符集*/
-        jdt {
-            File prefs = file('.settings/org.eclipse.core.resources.prefs')
-            if (!prefs.getParentFile().exists()) {
-                prefs.getParentFile().mkdirs();
+        jdt  {
+            //.settings/org.eclipse.core.resources.prefs
+            File resourcesPrefs = file('.settings/org.eclipse.core.resources.prefs')
+            if(!resourcesPrefs.getParentFile().exists()){
+                resourcesPrefs.getParentFile().mkdirs();
             }
-            if (!prefs.exists()) {
-                prefs.createNewFile();
+            if (!resourcesPrefs.exists()) {
+                resourcesPrefs.createNewFile();
             }
-            prefs.write('eclipse.preferences.version=1\n')
-            prefs.append('encoding/<project>=UTF-8') //use UTF-8
+            if(resourcesPrefs.text.indexOf('eclipse.preferences.version=1')==-1){
+                resourcesPrefs.append('eclipse.preferences.version=1\n')
+            }
+            if(resourcesPrefs.text.indexOf('encoding/<project>=UTF-8')==-1){
+                resourcesPrefs.append('encoding/<project>=UTF-8\n')//use UTF-8
+            }
+                
+            //.settings/org.eclipse.jdt.core.prefs
+            File corePrefs = file('.settings/org.eclipse.jdt.core.prefs')
+            if(!corePrefs.getParentFile().exists()){
+                corePrefs.getParentFile().mkdirs();
+            }
+            if (!corePrefs.exists()) {
+                corePrefs.createNewFile();
+            }
+            //methodParameters eclipse set -parameters
+            if(corePrefs.text.indexOf('org.eclipse.jdt.core.compiler.codegen.methodParameters=generate')==-1){
+                corePrefs.append('org.eclipse.jdt.core.compiler.codegen.methodParameters=generate\n')
+            }
         }
     }
 }
@@ -63,7 +82,6 @@ repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     mavenCentral()
-    jcenter()
 
 }
 
@@ -83,19 +101,11 @@ subprojects {
 
     repositories {
         mavenLocal()
-        maven { url "https://repo1.maven.org/maven2" }
-        maven { url "https://maven.aliyun.com/repository/central" }
-        maven { url "https://maven.aliyun.com/repository/public" }
-        maven { url "https://repo.spring.io/plugins-release" }
-        maven { url "https://repo.spring.io/milestone" }
-        maven { url "https://build.shibboleth.net/nexus/content/repositories/releases" }
-        maven { url "https://mvnrepository.com/repos/central" }
-        maven { url "https://jcenter.bintray.com" }
-        maven { url "https://mvn.gt.igexin.com/nexus/content/repositories/releases" }
-        maven { url "https://plugins.gradle.org/m2" }
-        maven { url "https://oss.sonatype.org/content/repositories/releases" }
-        maven { url "https://maven.repository.redhat.com/ga/" }
-        maven { url "https://repository.apache.org/content/repositories/releases" }
+        maven { url = "https://maven.aliyun.com/repository/central"}
+        maven { url = "https://maven.aliyun.com/repository/public"}
+        maven { url = "https://repo1.maven.org/maven2"}
+        maven { url = "https://build.shibboleth.net/nexus/content/repositories/releases" }
+        maven { url = "https://oss.sonatype.org/content/repositories/releases" }
         mavenCentral()
     }
 
