--- a/surpass/gradle.properties
+++ b/surpass/gradle.properties
@@ -5,11 +5,8 @@ version                         =1.2.0
 vendor                          =https://www.surpass.com
 author                          =Surpass
 
-#docker jib image
-jibFromImage					=eclipse-temurin:17-jre
-jibToImage						=Surpass
-jibToAuthUsername				=Surpass
-jibToAuthPassword				=docker registry credential
+#gradle
+org.gradle.caching              =true
 
 #jars version
 #spring
