surpass-web-api

--- a/surpass/surpass-web-api/src/main/resources/application-surpass.properties
+++ b/surpass/surpass-web-api/src/main/resources/application-surpass.properties
@@ -2,9 +2,9 @@
 #Server  configuration                                              #
 ############################################################################
 #server port
-server.port                                     =${SERVER_PORT:2155}
+server.port                                     =${SERVER_PORT:2154}
 #server context path
-server.servlet.context-path                     =/surpass-api
+server.servlet.context-path                     =/surpass
 ############################################################################
 #domain name configuration                                                 #
 ############################################################################
