--- a/surpass/surpass-web/src/main/resources/application.properties
+++ b/surpass/surpass-web/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.main.allow-bean-definition-overriding	=true
 ############################################################################
 #spring.profiles.active surpass                                           #
 ############################################################################
-spring.profiles.active                      =${SERVER_PROFILES:surpass}
+spring.profiles.active                      =${SERVER_PROFILES:admin}
