--- a/surpass/gradle.properties
+++ b/surpass/gradle.properties
@@ -13,7 +13,6 @@ org.gradle.caching              =true
 springVersion                   =6.2.8
 springBootVersion               =3.4.7
 springSecurityVersion           =6.5.1
-springSecurityOauth2Version     =1.3.1
 springDataVersion               =3.5.1
 springretryVersion              =2.0.9
 #spring plugin
@@ -62,18 +61,13 @@ slf4jVersion                    =2.0.16
 jbossloggingVersion             =3.6.1.Final
 
 #google
-jibGradlePluginVersion          =3.2.0
 jhlabsfiltersVersion            =2.0.235-1
 kaptchaVersion                  =2.3.2
 guavaVersion                    =33.2.1-jre
-tinkVersion                     =1.14.0
-zxingcoreVersion                =3.5.3
-concurrentlinkedhashmaplruVersion =1.4.2
 #json
 gsonVersion                     =2.11.0
 jacksonVersion                  =2.18.4
 fastjsonVersion                 =1.2.83
-minidevjsonsmartVersion         =2.4.5
 #database
 mysqlconnectorjavaVersion       =8.4.0
 druidVersion                    =1.2.23
@@ -103,26 +97,21 @@ xmlbindjaxbcoreVersion          =3.0.2
 xmlbindjaxbimplVersion          =3.0.2
 xmlbindjaxbxjcVersion           =3.0.2
 #jwt
-nimbusjosejwtVersion            =9.41.2
+nimbusjosejwtVersion            =10.6
 #jcipannotationsVersion          =1.0-1
+#test
+junitVersion                    =4.11
+xmlunitVersion                  =1.6
+mockitoallVersion               =1.10.19
 #others
-thymeleafVersion                =3.0.15.RELEASE
 nettyVersion                    =4.1.65.Final
-hazelcastVersion                =4.2.2
 attoparserVersion               =2.0.5.RELEASE
 unbescapeVersion                =1.1.6.RELEASE
 woodstoxVersion                 =6.2.8
 bouncycastleVersion             =1.71
-junitVersion                    =4.11
-xmlunitVersion                  =1.6
-mockitoallVersion               =1.10.19
 minidevasmVersion               =1.0.2
 javassistVersion                =3.29.0-GA
 esapiVersion                    =2.2.0.0
-jtaVersion                      =1.1
-validationapiVersion            =2.0.1.Final
-jsr173Version                   =1.0
-jaxbapiVersion                  =2.3.1
 classmateVersion                =1.5.1
 reactivestreamsVersion          =1.0.4
 reactorcoreVersion              =3.5.3
@@ -139,7 +128,6 @@ evictorVersion                  =1.0.0
 lettuceVersion                  =6.1.9.RELEASE
 reflectionsVersion              =0.10.2
 #xml
-jdom2Version                    =2.0.6.1
 dom4jVersion                    =2.1.4
 serializerVersion               =2.7.2
 xmlresolverVersion              =1.2
@@ -162,8 +150,6 @@ micrometercoreVersion           =1.13.4
 prometheusVersion               =0.16.0
 prometheusmetricsVersion        =1.3.1
 mapstructVersion                =1.5.3.Final
-JustAuthVersion                 =1.16.6
-simplehttpVersion               =1.0.5
 casclientVersion                =4.0.4
 #doc
 swaggerV3Version                =2.2.38
