--- a/surpass/surpass-web/build.gradle
+++ b/surpass/surpass-web/build.gradle
@@ -30,7 +30,8 @@ bootJar {
 dependencies {
 	//local jars
 	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
-
+	
+	implementation project(":surpass-api")
 	implementation project(":surpass-commons:surpass-common")
 	implementation project(":surpass-commons:surpass-core")
 	implementation project(":surpass-commons:surpass-crypto")
