--- a/surpass/surpass-web-api/build.gradle
+++ b/surpass/surpass-web-api/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	//local jars
 	implementation fileTree(dir: '../surpass-lib', include: ['*.jar'])
 
+	implementation project(":surpass-api")
 	implementation project(":surpass-commons:surpass-common")
 	implementation project(":surpass-commons:surpass-core")
 	implementation project(":surpass-commons:surpass-crypto")
