--- a/surpass-ui/package.json
+++ b/surpass-ui/package.json
@@ -29,10 +29,10 @@
     "pinia": "2.1.7",
     "surpass": "file:",
     "vue": "3.4.31",
-    "vue-count-to": "^1.0.13",
     "vue-cropper": "1.1.1",
     "vue-i18n": "^10.0.0",
     "vue-router": "4.4.0",
+    "vue3-autocounter": "^1.0.8",
     "vue3-treeselect": "^0.1.10",
     "vuedraggable": "^4.1.0",
     "xlsx": "0.18.5"
@@ -41,7 +41,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "5.0.5",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vue/tsconfig": "^0.6.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
@@ -50,7 +50,7 @@
     "typescript": "^5.6.3",
     "unplugin-auto-import": "0.17.6",
     "unplugin-vue-setup-extend-plus": "1.0.1",
-    "vite": "7.1.11",
+    "vite": "^5.0.0",
     "vite-plugin-compression": "0.5.1",
     "vite-plugin-svg-icons": "2.0.1"
   },
