--- a/surpass/surpass-web-api/src/main/resources/application.properties
+++ b/surpass/surpass-web-api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ application.title                               =Surpass
 #for dynamic service discovery
 spring.application.name                         =Surpass
 ############################################################################
-application.formatted-version                   =v1.2.0 GA
+application.formatted-version                   =v2.0.0
 ############################################################################
 #Main.banner-mode configuration                                            #
 ############################################################################
