--- a/surpass/build.gradle
+++ b/surpass/build.gradle
@@ -258,6 +258,7 @@ subprojects {
         implementation group: 'eu.tekul', name: 'szxcvbn_2.9.2', version: "${szxcvbnVersion}"
         //database
         implementation group: 'com.mysql', name: 'mysql-connector-j', version: "${mysqlconnectorjavaVersion}"
+        implementation group: 'org.postgresql', name: 'postgresql', version: "${postgresqlVersion}"
         implementation group: 'com.alibaba', name: 'druid', version: "${druidVersion}"
         implementation group: 'com.alibaba', name: 'druid-spring-boot-starter', version: "${druidspringbootstarterVersion}"
         implementation group: 'redis.clients', name: 'jedis', version: "${jedisVersion}"
