--- a/surpass/gradle.properties
+++ b/surpass/gradle.properties
@@ -69,6 +69,7 @@ jacksonVersion                  =2.18.4
 fastjsonVersion                 =1.2.83
 #database
 mysqlconnectorjavaVersion       =8.4.0
+postgresqlVersion               =42.7.8
 druidVersion                    =1.2.27
 druidspringbootstarterVersion   =1.2.27
 jedisVersion                    =5.2.0
