--- a/surpass-ui/package.json
+++ b/surpass-ui/package.json
@@ -3,7 +3,7 @@
   "version": "v2.0.0",
   "description": "surpass",
   "author": "surpass",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
